[package]
name = "dwarf_the_world"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_ui", "bevy_text", "bevy_sprite", "bevy_render", "multi-threaded"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4"

[profile.release]
opt-level = 2
